--- a/index.html
+++ b/index.html
@@ -66,13 +66,16 @@
     <input type="text" id="search" placeholder="Search for apps..." onkeyup="searchApps()">
     <div id="app-list">
         <div class="app">
-            <img src="EsignIcon.jpeg" alt="App 1 Icon">
-            <div class="app-info">
-                <div class="app-title">ESign</div>
-                <div class="app-version">Version 4.8.2</div>
-                <button class="install-button">Install</button>
-            </div>
-        </div>
+    <img src="EsignIcon.jpeg" alt="App 1 Icon">
+    <div class="app-info">
+        <div class="app-title">ESign</div>
+        <div class="app-version">Version 4.8.2</div>
+        <a href="itms-services://?action=download-manifest&url=https://mindgeezer.github.io/EXEPLIST/esign.plist">
+            <button class="install-button">Install</button>
+        </a>
+    </div>
+</div>
+
         <div class="app">
             <img src="GBoxIcon.jpeg" alt="App 2 Icon">
             <div class="app-info">
